contact links spacing fix

--- a/app/ui/components/ContactLinks/ContactLinks.module.scss
+++ b/app/ui/components/ContactLinks/ContactLinks.module.scss
@@ -7,6 +7,9 @@
 	gap: 2rem;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	@include vars.break(tablet){
+		justify-content: center;
+	}
 
 	@mixin itemDefaults {
 		list-style: none;
